fix: added dynamic z-index

--- a/src/components/Menu/Menu.sass
+++ b/src/components/Menu/Menu.sass
@@ -56,6 +56,7 @@
     visibility: visible
 
 .main-navigation, .reserved-navigation
+  z-index: 2
   @media (min-width: $tablet)
     position: relative
     padding: 0 1.6rem
@@ -103,6 +104,7 @@
           visibility: visible
           transform: translate3d(-50%, 0, 0) scale(1)
           transition-delay: 0
+          z-index: 5
 
       &::after
         content: ''
@@ -122,6 +124,7 @@
         &.is-sub-open, &:hover
           > ul
             transform: translate3d(0, 0, 0) scale(1)
+            z-index: 1
 
     &:first-child:not(:last-child)
       > ul
@@ -284,7 +287,7 @@
           max-height: 55rem
           margin-bottom: 2rem
           opacity: 1
-
+    
 .reserved-navigation
   @media (min-width: $tablet)
       padding-left: 0
